# freebase-example

./: CMakeLists.txt  package.xml
config/: quadruped-ff.rviz  quadruped.rviz
launch/: display-no-ff.launch  display-sliders.launch  display.launch
src/: kcontroller.py  markers.py  robot.py  test-kinematics-fixed.py  test-kinematics.py  test-motion-base.py  test-motion-position.py  utils.py
urdf/: sample-quadruped.xacro
